--- a/api/vercel.json
+++ b/api/vercel.json
@@ -8,7 +8,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app.js"
+        "dest": "app.js",
+        "headers": { "Cache-Control": "no-store" }
       }
     ]
   }
