--- a/api/vercel.json
+++ b/api/vercel.json
@@ -8,12 +8,7 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "app.js",
-<<<<<<< HEAD
-        "methods": ["GET"],
-=======
->>>>>>> 86c6661d536c72f020be625b45ecd433682b80ef
-        "headers": { "Cache-Control": "no-store" }
+        "dest": "app.js"
       }
     ]
   }
