--- a/api/package.json
+++ b/api/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "nivel-rio-acre",
+  "version": "1.0.0",
+  "description": "api",
   "dependencies": {
     "axios": "^1.6.7",
     "cors": "^2.8.5",
@@ -6,5 +9,8 @@
     "express": "^4.18.2",
     "nodemon": "^3.1.0",
     "xml2js": "^0.6.2"
+  },
+  "scripts": {
+    "start": "nodemon app.js"
   }
 }
